package edu.fiuba.algo3.modelo.Math;

public class Random implements IMath{
    public double random(){
        return Math.random();
    }
}
